// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Reducer should handle LOGOUT action 1`] = `
Object {
  "isLoggedIn": false,
  "loggedUser": Object {
    "name": "pepe",
  },
}
`;

exports[`Auth Reducer should should return initial state 1`] = `
Object {
  "isLoggedIn": false,
}
`;
